--- a/Resources/config/placeholders.yml
+++ b/Resources/config/placeholders.yml
@@ -2,9 +2,12 @@ placeholders:
     view_content_data_additional_information:
         items:
             demacmedia_instore_orders: ~
-
+            demacmedia_trackedevents_view: ~
 items:
     demacmedia_instore_orders:
         template: DemacMediaErpBundle:Default:orders-specific-view-accounts.html.twig
+        applicable: @oro_ui.placeholder.filter->isInstanceOf($entity$, %orocrm_account.account.entity.class%)
+    demacmedia_trackedevents_view:
+        template: DemacMediaErpBundle:TrackedEvents:events.html.twig
         applicable: @oro_ui.placeholder.filter->isInstanceOf($entity$, %orocrm_account.account.entity.class%)
 
